# pbfbench-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml  todo.md
config/: condaenv_313-dev.yml  new_release.py  requirements-figures.txt
docs/: README.md
docs/core/: sbatch_run_process.md
docs/environments/: README.md  env_wrapper.sh
docs/experiments/: README.md
src/pbfbench/: __init__.py  __main__.py  app.py  root_logging.py  shell.py  slurm.py  subprocess_lib.py  yaml_interface.py
src/pbfbench/abc/: app.py  module_meta.py
src/pbfbench/abc/tool/: __init__.py  app.py  bash.py  config.py  description.py  environments.py  inputs.py  shell.py  visitor.py
src/pbfbench/abc/topic/: __init__.py  app.py  description.py  visitor.py
src/pbfbench/bash/: __init__.py  create.py  items.py
src/pbfbench/doc/: __init__.py  app.py  environments.py
src/pbfbench/experiment/: __init__.py  checks.py  complete.py  config.py  errors.py  file_system.py  iter.py  run.py  shell.py  stats.py
src/pbfbench/experiment/bash/: __init__.py  create.py  file_system.py  items.py  sbatch_template.sh
src/pbfbench/experiment/slurm/: __init__.py  file_system.py  status.py
src/pbfbench/help/: __init__.py  app.py  tool_tree.py
src/pbfbench/samples/: __init__.py  bash.py  file_system.py  items.py  missing_inputs.py  shell.py  status.py
src/pbfbench/samples/slurm/: __init__.py  file_system.py  status.py
src/pbfbench/slurm/: __init__.py  bash.py  config.py  file_system.py  shell.py  status.py
src/pbfbench/topics/: __init__.py  items.py  visitor.py
(+75 files in other folders)
